= EDGE

* Refactored the view loading to work with changes in Edge Rails

* Fixed integration of plugin migrations with the new, default timestamped migrations in Edge Rails

* Refactored tests into the plugin itself - the plugin can now generate its own test_app harness and run tests within it.


= 2.0.0 - (ANOTHER) MASSIVE INTERNAL REFACTORING

* Engines now conforms to the new plugin loading mechanism, delegating plugin load order and lots of other things to Rails itself.



= 1.2.2

* Added the ability to code mix different types of files, cleaning up the existing code-mixing implementation slightly (Ticket #271)


= 1.2.1

* Added documentation to clarify some of the issues with Rails unloading classes that aren't required using "require_dependency" (Ticket #266)

* Fixed a bug where test_help was being loaded when it wasn't needed, and was actually causing problems (Ticket #265)


= 1.2.0 - MASSIVE INTERNAL REFACTORING

* !!!Support for Rails < 1.2 has been dropped!!!; if you are using Rails =< 1.1.6, please use Engines 1.1.6, available from http://svn.rails-engines.org/engines/tags/rel_1.1.6

* Engines are dead! Long live plugins! There is now no meaningful notion of an engine - all plugins can take advantage of the more powerful features that the engines plugin provides by including app directories, etc.

* Init_engine.rb is no longer used; please use the plugin-standard init.rb instead.

* Engines.start is no longer required; please use the config.plugins array provided by Rails instead

* To get the most benefit from Engines, set config.plugins to ["engines", "*"] to load the engines plugin first, and then all other plugins in their normal order after.

* Access all loaded plugins via the new Rails.plugins array, and by name using Rails.plugins[:plugin_name].

* Access plugin metadata loaded automatically from about.yml: Rails.plugins[:name].about. Plugin#version is provided directly, for easy access.
